2020-07-21  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdoc.[ch], pdfnames.[ch], pdfobj.c, pdfximage.[ch],
	spc_dvips.c, spc_html.c, spc_misc.c, spc_pdfm.c, specials.c:
	"Forward reference" of image objects is also supported.
	Object reference by name is now available globally but not
	only for the "special" module.
	* configure.ac: Version 20200721.

2020-07-19  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdraw.c: Avoid invoking gs operation for an empty ExtGState.

2020-07-18  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvipdfmx.c, pdfximage.[ch]: Don't call ordinary functions
	such as pdf_close_images() which can call ERROR() in
	error_cleanup(). This can result in a recursive call of
	error_cleanup().

2020-07-11  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdev.c, pdfdoc.c, pdfdraw.[ch], pdfobj.[ch], spc_pdfm.c:
	ExtGState can be manipulated with a dedicated stack.
	Add new specials pdf:bxgstate and pdf:exgstate to push/pop
	ExtGState into/from the stack.
	* pdfcolor.c: Fix a bug that assignment was missing
	in pdf_color_compare().
	* configure.ac: Version 20200711.

2020-07-04  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfcolor.c, spc_util.c: Fix a bug in pdfcolor.c.
	Add initialization of a variable and NULL pointer check.
	* configure.ac: Version 20200704.

2020-07-02  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdoc.c, spc_pdfm.c: Possible fix for a bug that pdf:btrans
	inside pdf:bcontent and pdf:econtent does not work correctly.
	Extend pdf:bann to accept a reference ID which can be used
	later to refer the annotation dictionary object. When
	line-breaks occur, it just points to the first annotation
	dictionary of the line-breaking annotation series.

2020-06-28  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvi.[ch], spc_dvipdfmx.c, spc_pdfm.c, specials.[ch]: Two new
	special commands added as workarounds for \phantom text issue
	in creating annotation (link). "pdf:xann" which extends the